--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ build-backend = "setuptools.build_meta"
 # https://packaging.python.org/en/latest/specifications/declaring-project-metadata
 [project]
 name = "kuwahara-torch"
-version = "0.0.1"
+version = "0.0.2"
 description = "Kuwahara filter in PyTorch."
 readme = "README.md"
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
 authors = [{ name = "Evan Arlian", email = "evanarlian2000@gmail.com" }]
-keywords = ["pytorch", "filter", "image", "kuwahara"]
+keywords = ["pytorch", "shaders", "image", "kuwahara"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -25,11 +25,11 @@ Homepage = "https://github.com/evanarlian/kuwahara-torch"
 
 [tool.ruff]
 line-length = 100
+src = ["src"]
 
 [tool.black]
 line-length = 100
 
-src = ["src"]
 
 # turns out src/<pkg_name> will be found automatically
 # https://github.com/pypa/packaging-problems/issues/615
